<?xml version="1.0"?>
<package format="2">
  <name>delibot_navigation</name>
  <version>0.1.0</version>
  <description>The delibot_navigation package</description>

  <maintainer email="hw@naver.com">hw</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>

  <export>
  </export>
</package>
